Update index.html file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visit Uganda Summit</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=lato' rel='stylesheet'>
 </head>
 <body>
@@ -42,7 +42,7 @@
           </nav>
         </div>
         <div class="navbar">
-          <div><a href="./index.html"><img class="logo" src="./images/logo.jpg" alt=""></a></div>
+          <div><a href="./index.html"><img class="summit-logo" src="./images/logo.jpg" alt=""></a></div>
     
           <nav class="navigation">
             <a href="./about.html">About</a>
@@ -104,12 +104,12 @@
               <a class="whole-program" href="#">SEE THE WHOLE PROGRAM</a>
             </div>
             <div class="program-btn">
-              <button type="button" class="join">Join Visit Uganda Summit</button>
+              <button type="button" class="join">Join Visit Uganda Summit 2022</button>
             </div>
           </section>
 
           <section class="speakers-section">
-            <h3 class="featured-speakers">Featured Guests</h3>
+            <h3 class="featured-speakers">Featured Speakers</h3>
             <ul class="speakers" id="speakers">
       
             </ul>
