Update about page file

--- a/about.html
+++ b/about.html
@@ -5,28 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visit Uganda Summit</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
     <link href='https://fonts.googleapis.com/css?family=lato' rel='stylesheet'>
 </head>
 <body>
     <div class="mobile-menu" id="mobile-menu">
         <div class="mobile-menu-header">
-          <button type="button" data-close-button class="close-button">&times;</button>
+          <button type="button" class="close-button">&times;</button>
         </div>
         <nav>
-          <a href="./index.html" data-close-button class="navigate">
+          <a href="./index.html" class="navigate">
             Home
           </a>
-          <a href="./about.html" data-close-button class="navigate">
+          <a href="./about.html" class="navigate">
             About
           </a>
-          <a href="./index.html#program" data-close-button class="navigate">
+          <a href="./index.html#program" class="navigate">
             Program
           </a>
-          <a href="#" data-close-button class="navigate">
-            Jobs
+          <a href="#" class="navigate">
+            Join
           </a>
-          <a href="./about.html#sponsor" data-close-button class="navigate">
+          <a href="./about.html#sponsor" class="navigate">
             Sponsor
           </a>
         </nav>
@@ -42,7 +42,7 @@
           </nav>
         </div>
         <div class="navbar">
-          <div><a href="./index.html"><img class="logo" src="./images/logo.jpg" alt=""></a></div>
+          <div class="navbar-logo-div"><a href="./index.html"><img class="summit-logo" src="./images/logo.jpg" alt=""></a></div>
     
           <nav class="navigation">
             <a href="./about.html">About</a>
@@ -58,7 +58,7 @@
 
       <main class="main">
         <div class="about-box">
-        <button type="button" class="hamburger" data-mobile-menu-target="#mobile-menu">
+        <button type="button" class="hamburger">
             <img src="./images/menu.png" alt="menu icon">
           </button>
           <p class="hello">"Hello! Tourism World"</p>
@@ -92,7 +92,7 @@
               </li>
               <li class="twenty">
                 <p class="year">2020</p>
-                <p class="venue">Visit Uganda Global Summit in Budapest</p>
+                <p class="previous-venue">Visit Uganda Global Summit in Budapest</p>
               </li>
             </ul>
           </section>
@@ -116,5 +116,14 @@
             <div class="rights">2022 Visit Uganda Summit<br>Some rights reserved</div>
           </footer>
 
+          <footer class="desktop-footer">
+            <div class="footer-logo">
+              <img class="footer-logo-img" src="./images/logo.jpg" alt="Visit Uganda logo">
+              <p class="summit-finland">Visit Uganda<br>Summit Finland</p>
+            </div>
+            <div class="rights">2022 Visit Uganda Summit<br>Some rights reserved <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit
+               Autem ducimus vero <br> expedita excepturi tempore, maxime id beatae nulla porro quidem?</div>
+          </footer>
+          <script defer src="script.js"></script>
 </body>
 </html>
