--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <header>
         <div class="social-media">
           <nav class="social-nav">
-            <a href="www.facebook.com/edith.naisanga"><img src="./images/facebook.png" alt="facebook"></a>
-            <a href="www.twitter.com/edithnaisanga"><img src="./images/twitter.png" alt="twitter"></a>
+            <a href="https://facebook.com/edith.naisanga"><img src="./images/facebook-icon.png" alt="facebook"></a>
+            <a href="https://twitter.com/edithnaisanga"><img src="./images/twitter-icon.png" alt="twitter"></a>
             <a href="#">English</a>
             <a href="https://github.com/nedith">My page</a>
             <a href="#">Logout</a>
@@ -47,7 +47,7 @@
           <nav class="navigation">
             <a href="./about.html">About</a>
             <a href="./index.html#program">Program</a>
-            <a href="#">Jobs</a>
+            <a href="#">Join</a>
             <a href="#sponsor">Sponsor</a>
             <button class="ug-btn" type="button">UG Campaign</button>
           </nav>
@@ -61,7 +61,7 @@
             <img src="./images/menu.png" alt="menu icon">
           </button>
           <p class="hello">"Hello! Tourism World"</p>
-          <h1 class="heading">VISIT UGANDA GLOBAL SUMMIT 2022</h1>
+          <h1 class="heading">VISIT UGANDA <br> GLOBAL SUMMIT <br> 2022</h1>
           <section class="begin">
             <h2 class="intro">An amazing event where we showcase everything beautiful about Uganda 
                 and leave you yearning to visit and experience the pearl of Africa</h2>
@@ -97,7 +97,8 @@
               </li>
               <li class="activity"><img class="img-activity" src="./images/prizes.png" alt="win icon">
                 <p class="description">Prizes</p>
-                <p class="explanation">Be among the 5 lucky winners for a fully sponsored <br> trip to the awesome Murchison falls <br> national park</p>
+                <p class="explanation">Be among the 5 lucky winners for a fully sponsored trip to the awesome Murchison falls 
+                  <br> national park</p>
               </li>
             </ul>
             <div class="see-program">
@@ -131,8 +132,9 @@
           <img class="footer-logo-img" src="./images/logo.jpg" alt="Visit Uganda logo">
           <p class="summit-finland">Visit Uganda<br>Summit Finland</p>
         </div>
-        <div class="rights">2022 Visit Uganda Summit<br>Some rights reserved <br> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit
-           Autem ducimus vero <br> expedita excepturi tempore, maxime id beatae nulla porro quidem?</div>
+        <div class="rights">2022 Visit Uganda Summit<br>Some rights reserved <br> <br> Lorem ipsum dolor sit amet 
+          consectetur adipisicing elit Autem ducimus vero <br> expedita excepturi tempore, maxime id beatae nulla porro quidem?
+        </div>
       </footer>
 
       <script defer src="script.js"></script>
