--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
       <header>
         <div class="social-media">
           <nav class="social-nav">
-            <a href="www.facebook.com/edith.naisanga"><img src="./images/facebook.png" alt="facebook"></a>
-            <a href="www.twitter.com/edithnaisanga"><img src="./images/twitter.png" alt="twitter"></a>
+            <a href="https://facebook.com/edith.naisanga"><img src="./images/facebook-icon.png" alt="facebook"></a>
+            <a href="https://twitter.com/edithnaisanga"><img src="./images/twitter-icon.png" alt="twitter"></a>
             <a href="#">English</a>
             <a href="https://github.com/nedith">My page</a>
             <a href="#">Logout</a>
@@ -47,7 +47,7 @@
           <nav class="navigation">
             <a href="./about.html">About</a>
             <a href="./index.html#program">Program</a>
-            <a href="">Jobs</a>
+            <a href="">Join</a>
             <a href="#sponsor">Sponsor</a>
             <button class="ug-btn" type="button">UG Campaign</button>
           </nav>
@@ -58,11 +58,11 @@
 
       <main class="main">
         <div class="about-box">
-        <button type="button" class="hamburger">
+          <button type="button" class="hamburger">
             <img src="./images/menu.png" alt="menu icon">
           </button>
           <p class="hello">"Hello! Tourism World"</p>
-          <h1 class="heading">VISIT UGANDA GLOBAL SUMMIT 2022</h1>
+          <h1 class="heading">VISIT UGANDA <br> GLOBAL SUMMIT 2022</h1>
           <section class="about-intro">
             <h2 class="mission">The global summit brings together tourist experts, acamedics and enthusiasts
                  who comprise of a wide network across the globe</h2>
