Fix linter errors

--- a/about.html
+++ b/about.html
@@ -96,13 +96,14 @@
               </li>
             </ul>
           </section>
+          </main>
           <!-- Partner section -->
           <section class="partner-section" id="sponsor">
             <h3 class="partner">Partner</h3>
             <div class="img-rows">
               <div class="img-row1"><img class="partner-img" src="./images/cocacola.png" alt="cocacola logo">
                 <img class="partner-img" src="./images/Nile-Special.jpg" alt="Nile special logo">
-                <img class="partner-img" src="./images/UTB LOGO.jpg" alt="UTB logo">
+                <img class="partner-img" src="./images/UTB-LOGO.jpg" alt="UTB logo">
               </div>
               <div class="img-row2"><img class="partner-img" src="./images/great-lakes.jpg" alt="great lakes logo">
                 <img class="partner-img" src="./images/ug-airlines.png" alt="Uganda airlines logo"></div>
