Fix linter errors

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             ><img
               class="summit-logo"
               src="./images/logo.jpg"
-              alt="Visit Uganda summit logo"
+              alt="Visit Uganda logo"
           /></a>
         </div>
 
