Modify navbar menu

--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         </div>
 
         <nav class="navigation">
-          <a href="./about.html">About</a>
+          <a href="./index.html">Home</a>
           <a href="./index.html#program">Program</a>
           <a href="">Join</a>
           <a href="#sponsor">Sponsor</a>
