Add smooth scroll to both pages

--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
       <nav>
         <a href="./index.html" class="navigate"> Home </a>
         <a href="./about.html" class="navigate"> About </a>
-        <a href="./index.html#program" class="navigate"> Program </a>
-        <a href="#" class="navigate"> Join </a>
+        <a href="#contact" class="navigate"> Contact </a>
+        <a href="#previous-summits" class="navigate">Summits </a>
         <a href="./about.html#sponsor" class="navigate"> Sponsor </a>
       </nav>
     </div>
@@ -50,8 +50,8 @@
 
         <nav class="navigation">
           <a href="./index.html">Home</a>
-          <a href="./index.html#program">Program</a>
-          <a href="">Join</a>
+          <a href="#contact">Contact</a>
+          <a href="#previous-summits">Summits</a>
           <a href="#sponsor">Sponsor</a>
           <button class="ug-btn" type="button">UG Campaign</button>
         </nav>
@@ -73,7 +73,7 @@
             The global summit brings together tourist experts, acamedics and
             enthusiasts who comprise of a wide network across the globe
           </h2>
-          <p class="contact">
+          <p class="contact" id="contact">
             Please contact us per Email for further questions<br />
             about Visit Uganda Summit 2022 <br /><span class="email"
               >nedith22@gmail.com</span
@@ -105,7 +105,7 @@
         </div>
       </section>
 
-      <section class="previous-summits">
+      <section class="previous-summits" id="previous-summits">
         <h3 class="previous-heading">See the Visit Uganda Summits</h3>
         <div class="previous-div"></div>
         <p class="previous-text">
