--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="./index.html" class="navigate"> Home </a>
         <a href="./about.html" class="navigate"> About </a>
         <a href="./index.html#program" class="navigate"> Program </a>
-        <a href="#" class="navigate"> Join </a>
+        <a href="#speakers-section" class="navigate"> Speakers </a>
         <a href="./about.html#sponsor" class="navigate"> Sponsor </a>
       </nav>
     </div>
@@ -51,7 +51,7 @@
         <nav class="navigation">
           <a href="./about.html">About</a>
           <a href="./index.html#program">Program</a>
-          <a href="#">Join</a>
+          <a href="#speakers-section">Speakers</a>
           <a href="#sponsor">Sponsor</a>
           <button class="ug-btn" type="button">UG Campaign</button>
         </nav>
